# adonai

./: .bumpversion.cfg  .dockerignore  .isort.cfg  CNAME  Dockerfile  LICENSE  README.md  api_endpoints.json  docker-compose.yaml  entrypoint.sh  pyproject.toml  tox.ini
.github/workflows/: build_docker.yml
adonai/: run.py
adonai/app/: __init__.py  auth.py  crud.py  decorators.py  mixin.py  models.py  permission.py
adonai/app/api/: __init__.py  mutations.py  queries.py  resolver.py
adonai/app/config/: __init__.py  base.py  database.py  secrets.py
adonai/app/config/logging/: __init__.py  base.py  providers.py
adonai/app/migrations/versions/: 1a36ada339d1_.py  272bb4c5edfd_.py  377b9a887471_.py  4dde61b9bef1_.py  59ed53ed7f8f_.py  5a7c063a58b0_.py  6be0e04c2f22_.py  a6387d2c9a49_.py  aa05eb95ee90_.py  b0b8aaebbed9_.py  b7e7b6d4f900_.py  dc82dcd4d8d5_.py  e760e415f09b_.py  f8a529e6356e_.py  first_start.py
adonai/domain/: crud.py  models.py  permission.py
adonai/domain/api/: mutations.py  queries.py  types.py
adonai/permission/: crud.py  models.py  permission.py
adonai/permission/api/: mutations.py  queries.py  types.py
adonai/permission/internal/: defaults.py  permission.py  permission_set.py
adonai/project/: crud.py  models.py  permission.py
adonai/project/api/: mutations.py  queries.py  types.py
adonai/user/: crud.py  models.py  permission.py
adonai/user/api/: mutations.py  queries.py  types.py
adonai/user/api/user/: mutations.py  queries.py
adonai/user/api/user_group/: mutations.py  queries.py
